# pox

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  README.md
.github/workflows/: build-builder.yml  build.yml  ci.yml
crates/phpx-cli/: Cargo.toml
crates/phpx-cli/src/: add.rs  config.rs  install.rs  main.rs  remove.rs  update.rs  version_manager.rs
crates/phpx-cli/src/pm/: audit.rs  dump_autoload.rs  mod.rs  run.rs  scripts.rs  search.rs  show.rs  why.rs
crates/phpx-embed/: Cargo.toml  README.md  build.rs
crates/phpx-embed/src/: abi.h  embed.c  embed_abi.c  lib.rs  loader.rs
crates/phpx-pm/: Cargo.toml
crates/phpx-pm/src/: composer.rs  dependency_graph.rs  event.rs  lib.rs  scripts.rs  util.rs
crates/phpx-pm/src/autoload/: generator.rs
crates/phpx-pm/src/cache/: cache.rs  repo_cache.rs
crates/phpx-pm/src/downloader/: manager.rs
crates/phpx-pm/src/installer/: installer.rs  manager.rs
crates/phpx-pm/src/json/: lock.rs  schema.rs
crates/phpx-pm/src/package/: convert.rs  mod.rs  package.rs  root_version.rs
crates/phpx-pm/src/plugin/: mod.rs  symfony_runtime.rs
crates/phpx-pm/src/repository/: artifact.rs  composer.rs  installed.rs  manager.rs  package.rs  path.rs  platform.rs  traits.rs
crates/phpx-pm/src/repository/vcs/: git.rs  repository.rs
crates/phpx-pm/src/solver/: decisions.rs  mod.rs  pool.rs  pool_builder.rs  pool_optimizer.rs  problem.rs  rule.rs  rule_generator.rs  rule_set.rs  solver.rs  watch_graph.rs
crates/phpx-semver/src/: version_parser.rs
crates/pox-cli/: Cargo.toml  build.rs
crates/pox-cli/src/: add.rs  config.rs  create_project.rs  init.rs  install.rs  main.rs  remove.rs  update.rs
crates/pox-cli/src/pm/: audit.rs  bin.rs  bump.rs  clear_cache.rs  dump_autoload.rs  exec.rs  fund.rs  home.rs  mod.rs  outdated.rs  platform.rs  recipes.rs  reinstall.rs  run.rs  search.rs  show.rs  why.rs
crates/pox-embed/: Cargo.toml  README.md  build.rs
crates/pox-embed/src/: embed.c  embed.h  lib.rs
crates/pox-embed/tests/: integration_tests.rs
crates/pox-pm/: Cargo.toml
crates/pox-pm/src/: composer.rs  dependency_graph.rs  error.rs  lib.rs  scripts.rs  test_content_hash.rs  util.rs
crates/pox-pm/src/autoload/: ClassLoader.php.template  InstalledVersions.php.template  classmap.rs  mod.rs
crates/pox-pm/src/cache/: README.md  cache.rs  mod.rs
crates/pox-pm/src/cli/: mod.rs  output.rs  progress.rs
crates/pox-pm/src/config/: README.md  auth.rs  config.rs  mod.rs  source.rs
crates/pox-pm/src/downloader/: archive.rs  checksum.rs  file.rs  git.rs  mod.rs  path.rs
crates/pox-pm/src/http/: client.rs  mod.rs
crates/pox-pm/src/installer/: binary.rs  installer.rs  library.rs  manager.rs  metapackage.rs  mod.rs
crates/pox-pm/src/json/: loader.rs  mod.rs
crates/pox-pm/src/package/: alias.rs  autoload.rs  convert.rs  link.rs  mod.rs  package.rs  root_version.rs  source.rs  version_bumper.rs
crates/pox-pm/src/plugin/: composer_bin.rs  mod.rs  phpstan_extension_installer.rs  registry.rs
crates/pox-pm/src/repository/: artifact.rs  composer.rs  mod.rs  platform.rs
crates/pox-pm/src/repository/vcs/: bitbucket.rs  driver.rs  github.rs  gitlab.rs  mod.rs
crates/pox-pm/src/solver/: mod.rs  policy.rs  pool.rs  pool_optimizer.rs  request.rs  rule_generator.rs  solver.rs  tests.rs  transaction.rs  watch_graph.rs
crates/pox-pm/tests/: config_integration_test.rs
crates/pox-semver/: Cargo.toml  README.md
crates/pox-semver/benches/: semver.rs
crates/pox-semver/src/: comparator.rs  lib.rs  semver.rs
crates/pox-semver/src/constraint/: bound.rs  constraint.rs  constraint_interface.rs  match_all.rs  match_none.rs  mod.rs  multi_constraint.rs  operator.rs
crates/pox-spdx/: Cargo.toml
crates/pox-spdx/src/: lib.rs  tests.rs
docs/: DYNAMIC_PHP_VERSIONS.md
