[package]
name = "phpx-cli"
description = "PHP CLI embedded in a static binary"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "phpx"
path = "src/main.rs"

[dependencies]
phpx-embed = { path = "../phpx-embed" }
phpx-pm = { path = "../phpx-pm" }
phpx-semver = { path = "../phpx-semver" }
phpx-spdx = { path = "../phpx-spdx" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = "0.11"
atty = "0.2"
regex = "1"
notify = "8"
notify-debouncer-full = "0.5"
globset = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
terminal_size = "0.4"
log = "0.4"
env_logger = "0.11"
