[package]
name = "phpx-embed"
description = "Rust bindings to embed PHP via the PHP embed SAPI"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
static = []  # Force static linking against libphp.a
dynamic-loader = ["libloading"]  # Enable dynamic library loading

[dependencies]
thiserror = "2"
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
