[package]
name = "pox-embed"
description = "Rust bindings to embed PHP via the PHP embed SAPI"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
static = []  # Force static linking against libphp.a

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
