[package]
name = "pox-pm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composer-compatible PHP package manager implementation"

[dependencies]
# Internal crates
pox-semver = { path = "../pox-semver" }
pox-spdx = { path = "../pox-spdx" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "blocking"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# CLI (will be used later)
clap = { version = "4", features = ["derive"] }

# Progress/Output
indicatif = "0.17"
console = "0.15"

# Archive handling
zip = "2"
tar = "0.4"
flate2 = "1"

# Git
git2 = "0.19"

# Filesystem
walkdir = "2"
tempfile = "3"
directories = "5"
glob = "0.3"
shellexpand = "3"
pathdiff = "0.2"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"

# Additional compression
bzip2 = { version = "0.5", features = ["static"] }
xz2 = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

# Async traits
async-trait = "0.1"

# Regex
regex = "1"

# Ordered collections
indexmap = { version = "2", features = ["serde"] }

# URL handling
url = "2"
urlencoding = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
