[package]
name = "pox-spdx"
description = "SPDX license validation library compatible with Composer/spdx-licenses"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
lazy_static = "1"
